<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity"
    tools:padding="@dimen/dimen_size_40">

    <ImageView
        android:id="@+id/iv_login_iberdrola"
        android:layout_width="165dp"
        android:layout_height="70dp"
        android:contentDescription="@string/logo_image_content_description"
        android:src="@drawable/ic_logo_iberdrola_cli"
        app:layout_constraintBottom_toTopOf="@+id/space_login_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Space
        android:id="@+id/space_login_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/et_login_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_iberdrola" />

    <EditText
        android:id="@+id/et_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_login_top" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:hint="@string/auth_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/cb_login_remember_password"
        app:layout_constraintEnd_toEndOf="@+id/et_login_user"
        app:layout_constraintStart_toStartOf="@+id/et_login_user"
        app:layout_constraintTop_toBottomOf="@+id/et_login_user" />

    <CheckBox
        android:id="@+id/btn_login_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/ic_eye"
        android:buttonTint="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintTop_toTopOf="@+id/et_login_password" />

    <CheckBox
        android:id="@+id/cb_login_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_password"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_forgot_password"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_login_forgot_password"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_my_credentials"
        app:layout_constraintBottom_toTopOf="@+id/space_login_bottom"
        app:layout_constraintStart_toStartOf="@+id/cb_login_remember_password"
        app:layout_constraintTop_toBottomOf="@+id/cb_login_remember_password" />

    <Space
        android:id="@+id/space_login_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_forgot_password" />

    <Button
        android:id="@+id/btn_login_accept"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/login_login_btn"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_other_option_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_login_bottom"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider_login_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_other_option_label"
        app:layout_constraintEnd_toStartOf="@+id/tv_login_other_option_label"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_login_other_option_label" />

    <TextView
        android:id="@+id/tv_login_other_option_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/auth_you_can_also"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_signup"
        app:layout_constraintEnd_toStartOf="@+id/divider_login_right"
        app:layout_constraintStart_toEndOf="@+id/divider_login_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_accept" />

    <View
        android:id="@+id/divider_login_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_other_option_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_login_other_option_label"
        app:layout_constraintTop_toTopOf="@+id/tv_login_other_option_label" />

    <Button
        android:id="@+id/btn_login_signup"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_other_option_label"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1.5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
