<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.secondPract.fragment.SSDetailsFragment">


    <TextView
        android:id="@+id/tv_ss_detail_cau_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:labelFor="@+id/et_ss_detail_cau"
        android:text="@string/ss_details_cau_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_ss_detail_cau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ss_detail_cau_label"
        tools:text="ES0021000000001994LJ1FA000" />

    <TextView
        android:id="@+id/tv_ss_detail_request_status_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:labelFor="@+id/et_ss_detail_request_status"
        android:text="@string/ss_details_request_status_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ss_detail_cau" />

    <EditText
        android:id="@+id/et_ss_detail_request_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ss_detail_request_status_label"
        tools:ignore="RtlSymmetry"
        tools:text="No hemos recibido ninguna solicitud de autoconsumo" />

    <TextView
        android:id="@+id/tv_ss_detail_self_consumption_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:labelFor="@+id/et_ss_detail_self_consumption_type_label"
        android:text="@string/ss_details_consumption_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ss_detail_request_status" />

    <EditText
        android:id="@+id/et_ss_detail_self_consumption_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ss_detail_self_consumption_type_label"
        tools:text="Con excedentes y compensación Individual - Consumo" />

    <TextView
        android:id="@+id/tv_ss_detail_surplus_compensation_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:labelFor="@+id/et_ss_detail_surplus_compensation"
        android:text="@string/ss_details_surplus_compensation_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ss_detail_self_consumption_type_label" />

    <EditText
        android:id="@+id/et_ss_detail_surplus_compensation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ss_detail_surplus_compensation_label"
        tools:text="Precio PVPC" />

    <TextView
        android:id="@+id/tv_ss_detail_power_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_size_16"
        android:labelFor="@+id/et_ss_detail_installation_power"
        android:text="@string/ss_details_power_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ss_detail_surplus_compensation" />

    <EditText
        android:id="@+id/et_ss_detail_installation_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ss_detail_power_label"
        tools:text="5kWp" />

    <Button
        android:id="@+id/btn_ss_detail_info_dialog"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_info"
        app:iconSize="23dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="@+id/et_ss_detail_request_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ss_detail_request_status_label" />
</androidx.constraintlayout.widget.ConstraintLayout>
